# projektor

./: .eslintrc.js  .gitignore  .npmignore  .npmrc  GEMINI.md  README.md  babel.config.js  electron.js  jest.config.js  jest.setup.ts  metro.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  preload.js  tsconfig.json  tsconfig.native.json  webpack.config.js
backend/: pyproject.toml  requirements.txt
backend/src/: database.py  main.py  models.py
backend/src/api/: admin.py  auth.py  competitions.py  headteacher.py  join_requests.py  student.py  teams.py  users.py
backend/src/services/: competition_service.py  join_request_service.py  team_service.py  user_service.py
backend/tests/api/: test_competitions.py  test_teams.py  test_users.py
backend/tests/unit/: test_competition_service.py  test_team_service.py  test_user_service.py
docs/: README.md
e2e/: README.md  admin.spec.ts  auth-and-registration.spec.ts  collaboration.spec.ts  competitions-and-teams.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  integration.spec.ts  moderation.spec.ts  tsconfig.json
native/: app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
native/android/: settings.gradle
native/android/app/: build.gradle
native/ios/: Podfile
scripts/: cleanup_test_db.py  run-android.js  verify-e2e-setup.sh
src/: env.d.ts
src/core/api/: apiClient.ts  (+3 more)
src/desktop/: App.tsx  index.tsx
src/native/: App.tsx  app.json
src/web/: App.test.tsx  App.tsx
static/: index.html
(+138 files in other folders)
